// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigationListItem Basic 1`] = `
<ui5-li-custom
  class="SideNavigationListItem-listItem-0"
  data-has-children="false"
  data-id="home"
  id="home"
>
  <ui5-icon
    accessible-name=""
    class="SideNavigationListItem-icon-0"
    name="home"
  />
</ui5-li-custom>
`;

exports[`SideNavigationListItem custom class name and style 1`] = `
<ui5-li-custom
  class="SideNavigationListItem-listItem-0 myClass"
  data-has-children="false"
  data-id="home"
  id="home"
  style="background-color: pink;"
>
  <ui5-icon
    accessible-name=""
    class="SideNavigationListItem-icon-0"
    name="home"
  />
</ui5-li-custom>
`;
